2004-10-07  jrandom     * Expire queued messages even when the writer is blocked.     * Reimplement most of the I2NP writing with less temporary memory       allocations (I2NP reading still gobbles memory).
Monotone-Parent: 7c0b2f1be8e7ecc85191ccaa1226c9e3c0288e13
Monotone-Revision: e34d51d4b498021fe2a5fb93149705f1b72c0c49

Monotone-Author: jrandom
Monotone-Date: 2004-10-07T19:19:51
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.36 2004/10/06 08:23:38 jrandom Exp $
+$Id: history.txt,v 1.37 2004/10/06 16:03:52 jrandom Exp $
+
+2004-10-07  jrandom
+    * Expire queued messages even when the writer is blocked.
+    * Reimplement most of the I2NP writing with less temporary memory 
+      allocations (I2NP reading still gobbles memory).
 
 2004-10-06  jrandom
     * Implement an active queue management scheme on the TCP transports,
