2004-10-07  jrandom     * Reimplement the I2NP reading with less temporary memory allocation.       There is still significant GC churn, especially under load, but this       should help.     * Catch some oddball errors in the transport (message timeout while       establishing).
Monotone-Parent: e34d51d4b498021fe2a5fb93149705f1b72c0c49
Monotone-Revision: 996a65c29e41054acf8c1adc51b2f1e1e7b0362e

Monotone-Author: jrandom
Monotone-Date: 2004-10-08T02:08:10
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,11 @@
-$Id: history.txt,v 1.37 2004/10/06 16:03:52 jrandom Exp $
+$Id: history.txt,v 1.38 2004/10/07 14:19:52 jrandom Exp $
+
+2004-10-07  jrandom
+    * Reimplement the I2NP reading with less temporary memory allocation.
+      There is still significant GC churn, especially under load, but this
+      should help.
+    * Catch some oddball errors in the transport (message timeout while 
+      establishing).
 
 2004-10-07  jrandom
     * Expire queued messages even when the writer is blocked.
