--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.39 2004/10/07 21:08:11 jrandom Exp $
+$Id: history.txt,v 1.40 2004/10/08 13:38:49 jrandom Exp $
+
+2004-10-08  jrandom
+    * Revamp the AESInputStream so it doesn't allocate any temporary objects 
+      during its operation.
 
 2004-10-08  jrandom
     * Don't kill the establisher threads during a soft restart.
