2004-10-10  cervantes     * Update the I2PTunnel HTTP proxy to strip out the i2paddresshelper from       the request.
Monotone-Parent: e259f268ae20f4ec2f2fc9912ef5c8b748c48da3
Monotone-Revision: 29f96d65b99c1fdc7442435bd02155732e86fd3f

Monotone-Author: jrandom
Monotone-Date: 2004-10-10T14:57:15
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.41 2004/10/08 17:53:03 jrandom Exp $
+$Id: history.txt,v 1.42 2004/10/09 19:03:27 jrandom Exp $
+
+2004-10-10  cervantes
+    * Update the I2PTunnel HTTP proxy to strip out the i2paddresshelper from
+      the request.
 
 2004-10-09  jrandom
     * Added a watchdog timer to do some baseline liveliness checking to help 
