--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,6 @@
-$Id: history.txt,v 1.42 2004/10/09 19:03:27 jrandom Exp $
+$Id: history.txt,v 1.43 2004/10/10 09:57:15 jrandom Exp $
+
+* 2004-10-10  0.4.1.2 released
 
 2004-10-10  cervantes
     * Update the I2PTunnel HTTP proxy to strip out the i2paddresshelper from
