2004-10-13  jrandom     * Fix the probabalistic tunnel reject (we always accepted everything,       since the docs on java.util.Random.nextDouble() are wrong..)     * Fixed a race on startup (thanks Quadn!)
Monotone-Parent: 0b0eeec8d5630ebd37e3c2a11c77d019920fe2e9
Monotone-Revision: 979ad8eb13445cb21cec296681259fca58f5b389

Monotone-Author: jrandom
Monotone-Date: 2004-10-13T19:40:47
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.44 2004/10/10 14:33:09 jrandom Exp $
+$Id: history.txt,v 1.45 2004/10/12 16:29:42 jrandom Exp $
+
+2004-10-13  jrandom
+    * Fix the probabalistic tunnel reject (we always accepted everything, 
+      since the docs on java.util.Random.nextDouble() are wrong..)
+    * Fixed a race on startup (thanks Quadn!)
 
 2004-10-12  jrandom
     * Disable the probabalistic drop by default (enable via the router config
