--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.47 2004/10/14 15:02:45 jrandom Exp $
+$Id: history.txt,v 1.48 2004/10/14 20:20:12 jrandom Exp $
+
+2004-10-15  jrandom
+    * Replaced old minimum tunnel test timeout of 1s with a configurable
+      value (router.config property "router.tunnelTestMinimum", with the
+      default of 2s).
 
 2004-10-14  jrandom
     * Tunnel rejection is no longer a sign of an overwhelmingly loaded
