clarify history - we reduce the capacity calc, not the 'isFailing'.     * More aggressively reduce the capacity of peers if their tunnels are       failing so that we move off them quicker.
Monotone-Parent: 9e94a4b39d404f27215dfe36970f1496c5b0590a
Monotone-Revision: 79ab648cd255ede59b2adb5556eb390df0505425

Monotone-Author: jrandom
Monotone-Date: 2004-10-17T04:00:21
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,8 +1,8 @@
-$Id: history.txt,v 1.50 2004/10/16 13:00:47 jrandom Exp $
+$Id: history.txt,v 1.51 2004/10/16 22:58:09 jrandom Exp $
 
 2004-10-16  jrandom
-    * More aggressively fail peers if their tunnels are failing so that we 
-      move off them quicker.
+    * More aggressively reduce the capacity of peers if their tunnels are
+      failing so that we move off them quicker.
     * Simplify some data structure serialization for reuse in the streaming
       lib, as well as add support for signing and verifying partial byte 
       arrays.
