2004-10-17  jrandom     * Don't b0rk on whitespace in the router address.
Monotone-Parent: 9efe09534a28da44b20ba43768212e6b891615c1
Monotone-Revision: 597b80d4ea35cffb620dc70d33e93330e58209c4

Monotone-Author: jrandom
Monotone-Date: 2004-10-17T21:03:05
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.51 2004/10/16 22:58:09 jrandom Exp $
+$Id: history.txt,v 1.52 2004/10/16 23:00:21 jrandom Exp $
+
+2004-10-17  jrandom
+    * Don't b0rk on whitespace in the router address.
 
 2004-10-16  jrandom
     * More aggressively reduce the capacity of peers if their tunnels are
