--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-$Id: history.txt,v 1.52 2004/10/16 23:00:21 jrandom Exp $
+$Id: history.txt,v 1.53 2004/10/17 16:03:06 jrandom Exp $
+
+* 2004-10-18  0.4.1.3 released
+
+2004-10-18  jrandom
+    * Allow sending messages with a section of a byte array.
+    * Reduced stats published.
 
 2004-10-17  jrandom
     * Don't b0rk on whitespace in the router address.
