2004-10-23  jrandom     * Minor ministreaming lib refactoring to simplify integration of the full       streaming lib.     * Minor bugfixes to data structure serialization.
Monotone-Parent: 8b2c0771f8193345450858cbf67c8b4f21f0845d
Monotone-Revision: 35c75ed974f70e2d7b96ed48b1c09f1b1a520e1e

Monotone-Author: jrandom
Monotone-Date: 2004-10-24T01:42:34
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.53 2004/10/17 16:03:06 jrandom Exp $
+$Id: history.txt,v 1.54 2004/10/18 14:08:01 jrandom Exp $
+
+2004-10-23  jrandom
+    * Minor ministreaming lib refactoring to simplify integration of the full
+      streaming lib.
+    * Minor bugfixes to data structure serialization.
 
 * 2004-10-18  0.4.1.3 released
 
