2004-10-29  jrandom     * Strip the Referer, Via, and From headers completely, rather than       inserting a bogus value ("i2p").  This should help with the use of       SnipSnap and Geeklog (thanks nickster and DrWoo!)
Monotone-Parent: 87ba5a7ccf4b87531da671b43a82d0ef00d836b7
Monotone-Revision: 9d18eebdfba49885e4970f01da5546e1b3f7440e

Monotone-Author: jrandom
Monotone-Date: 2004-10-30T02:40:52
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.56 2004/10/24 18:00:44 jrandom Exp $
+$Id: history.txt,v 1.57 2004/10/27 21:11:52 jrandom Exp $
+
+2004-10-29  jrandom
+    * Strip the Referer, Via, and From headers completely, rather than 
+      inserting a bogus value ("i2p").  This should help with the use of
+      SnipSnap and Geeklog (thanks nickster and DrWoo!)
 
 2004-10-27  jrandom
     * Fix a strange race condition on i2cp client disconnect.
