2004-11-01  jrandom     * Increase the tunnel test timeout rapidly if our tunnels are failing.     * Honor message expirations for some tunnel jobs that were prematurely       expired.     * Streamline memory usage with temporary object caches and more efficient       serialization for SHA256 calculation, logging, and both I2CP and I2NP       message handling.     * Fix some situations where we forward messages too eagerly.  For a       request at the tunnel endpoint, if the tunnel is inbound and the target       is remote, honor the message by tunnel routing the data rather than       sending it directly to the requested location.
Monotone-Parent: 4bc35fa196a60815ac817eaaa404f656ec986d73
Monotone-Revision: 32a73fbb3c480a54ecd758d12be2bf4f52c7da69

Monotone-Author: jrandom
Monotone-Date: 2004-11-01T13:31:29
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,16 @@
-$Id: history.txt,v 1.58 2004/10/29 21:40:52 jrandom Exp $
+$Id: history.txt,v 1.59 2004/10/30 18:44:01 jrandom Exp $
+
+2004-11-01  jrandom
+    * Increase the tunnel test timeout rapidly if our tunnels are failing.
+    * Honor message expirations for some tunnel jobs that were prematurely
+      expired.
+    * Streamline memory usage with temporary object caches and more efficient
+      serialization for SHA256 calculation, logging, and both I2CP and I2NP
+      message handling.
+    * Fix some situations where we forward messages too eagerly.  For a 
+      request at the tunnel endpoint, if the tunnel is inbound and the target 
+      is remote, honor the message by tunnel routing the data rather than
+      sending it directly to the requested location.
 
 2004-10-30  jrandom
     * Cache the temporary objects used in the AES encryption/decryption
