2004-11-02  jrandom     * Fixed up the configuration overrides for the streaming socket lib       integration so that it properly honors env settings.     * More memory usage streamlining (last major revamp for now, i promise)
Monotone-Parent: 32a73fbb3c480a54ecd758d12be2bf4f52c7da69
Monotone-Revision: 0940084bb3c3bc63f1ff09af0669b8352b64b29c

Monotone-Author: jrandom
Monotone-Date: 2004-11-02T08:27:55
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.59 2004/10/30 18:44:01 jrandom Exp $
+$Id: history.txt,v 1.60 2004/11/01 08:31:31 jrandom Exp $
+
+2004-11-02  jrandom
+    * Fixed up the configuration overrides for the streaming socket lib 
+      integration so that it properly honors env settings.
+    * More memory usage streamlining (last major revamp for now, i promise)
 
 2004-11-01  jrandom
     * Increase the tunnel test timeout rapidly if our tunnels are failing.
