2004-11-02  jrandom     * Fix for a long standing synchronization bug in the JobQueue (and added       some kooky flags to make sure it stays dead)     * Update the ministreaming lib to force mode=guaranteed if the default       lib is used, and mode=best_effort for all other libs.
Monotone-Parent: 0940084bb3c3bc63f1ff09af0669b8352b64b29c
Monotone-Revision: 8501fabe7240f9972aef2b11dde4c491b0762b2b

Monotone-Author: jrandom
Monotone-Date: 2004-11-02T11:57:07
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-$Id: history.txt,v 1.60 2004/11/01 08:31:31 jrandom Exp $
+$Id: history.txt,v 1.61 2004/11/02 03:27:56 jrandom Exp $
+
+2004-11-02  jrandom
+    * Fix for a long standing synchronization bug in the JobQueue (and added
+      some kooky flags to make sure it stays dead)
+    * Update the ministreaming lib to force mode=guaranteed if the default
+      lib is used, and mode=best_effort for all other libs.
 
 2004-11-02  jrandom
     * Fixed up the configuration overrides for the streaming socket lib 
