2004-11-06  jrandom     * Fix for a long standing synchronization bug in the SDK that in rare       instances can add a few seconds of lag.
Monotone-Parent: 409a29161d99349f43e9af2c7578a13e936488bd
Monotone-Revision: 7edf2e97666994eb3aeb750c504e6b226e17d785

Monotone-Author: jrandom
Monotone-Date: 2004-11-06T07:59:54
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.62 2004/11/02 06:57:08 jrandom Exp $
+$Id: history.txt,v 1.63 2004/11/05 05:53:41 jrandom Exp $
+
+2004-11-06  jrandom
+    * Fix for a long standing synchronization bug in the SDK that in rare 
+      instances can add a few seconds of lag.
 
 2004-11-05  jrandom
     * Bugfixes and unit tests for the SAM bridge to handle quoted message
