added my ping everyone script
Monotone-Parent: 8c8949d7376612a2cce052f81636d3c8b75599ba
Monotone-Revision: 99e3159d3a208b9b3f0ce172abf180b981762e9e

Monotone-Author: mpc
Monotone-Date: 2004-11-07T02:45:40
Monotone-Branch: i2p.i2p

--- a/apps/sam/c/doc/todo.txt
+++ b/apps/sam/c/doc/todo.txt
@@ -2,6 +2,8 @@ I need to do these things:
 
 * SAM raw support
 * Write an instruction manual
+* Make dest a dynamic string
+* Change SAM parser to use a hashmap
 
 Anyone can help with these things:
 
