--- a/apps/sam/c/doc/todo.txt
+++ b/apps/sam/c/doc/todo.txt
@@ -4,6 +4,7 @@ I need to do these things:
 * Write an instruction manual
 * Make dest a dynamic string
 * Change SAM parser to use a hashmap
+* Switch to GNU Autoconf (?)
 
 Anyone can help with these things:
 
