--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.65 2004/11/06 21:25:13 jrandom Exp $
+$Id: history.txt,v 1.66 2004/11/06 22:00:56 jrandom Exp $
+
+2004-11-08  jrandom
+    * Make the SAM bridge more resiliant to bad handshakes (thanks duck!)
 
 * 2004-11-06  0.4.1.4 released
 
