2004-11-16  jrandom     * Minor logging update (toss net.i2p.router.JobQueueRunner=WARN in /configlogging.jsp to see wtf is hanging your router)
Monotone-Parent: 0129e9f4857ad132b238ca69c465eca01700aacf
Monotone-Revision: 12cf27042ac6d104d408f6912edcce0780a59288

Monotone-Author: jrandom
Monotone-Date: 2004-11-16T13:45:40
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.70 2004/11/13 04:43:35 jrandom Exp $
+$Id: history.txt,v 1.71 2004/11/15 09:35:18 jrandom Exp $
+
+2004-11-16  jrandom
+    * Minor logging update
 
 2004-11-14  jrandom
     * Fix a long standing leak in I2PTunnel (hanging on to i2psocket objects)
