2004-11-16  jrandom     * Clean up the propogation of i2psocket options so that various streaming       libs can honor them more precisely
Monotone-Parent: 12cf27042ac6d104d408f6912edcce0780a59288
Monotone-Revision: 360009d9078f71fe2ae2e0ae9c8ffb18ae3cfb5b

Monotone-Author: jrandom
Monotone-Date: 2004-11-16T22:11:11
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.71 2004/11/15 09:35:18 jrandom Exp $
+$Id: history.txt,v 1.72 2004/11/16 08:45:40 jrandom Exp $
+
+2004-11-16  jrandom
+    * Clean up the propogation of i2psocket options so that various streaming
+      libs can honor them more precisely
 
 2004-11-16  jrandom
     * Minor logging update
