2004-11-17  jrandom     * Minor logging update.
Monotone-Parent: 3a5eeecf15018f121b57c32c1b63c708487d8bb7
Monotone-Revision: 36bb67be3e447a432959bdf2d0436d0df83aa58e

Monotone-Author: jrandom
Monotone-Date: 2004-11-17T18:34:25
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.72 2004/11/16 08:45:40 jrandom Exp $
+$Id: history.txt,v 1.73 2004/11/16 17:11:12 jrandom Exp $
+
+2004-11-17  jrandom
+    * Minor logging update.
 
 2004-11-16  jrandom
     * Clean up the propogation of i2psocket options so that various streaming
