2004-11-17  jrandom     * Fix to propogate i2psocket options into the SAM bridge correctly (thanks       Ragnarok!)
Monotone-Parent: 36bb67be3e447a432959bdf2d0436d0df83aa58e
Monotone-Revision: bd29e175836369ce889af41b10ab0e66e5e04586

Monotone-Author: jrandom
Monotone-Date: 2004-11-17T19:42:53
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.73 2004/11/16 17:11:12 jrandom Exp $
+$Id: history.txt,v 1.74 2004/11/17 13:34:25 jrandom Exp $
+
+2004-11-17  jrandom
+    * Fix to propogate i2psocket options into the SAM bridge correctly (thanks
+      Ragnarok!)
 
 2004-11-17  jrandom
     * Minor logging update.
