--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.74 2004/11/17 13:34:25 jrandom Exp $
+$Id: history.txt,v 1.75 2004/11/17 14:42:53 jrandom Exp $
+
+2004-11-19  jrandom
+    * Off-by-one fix to the tunnel pool management code, along side some 
+      explicit initialization.  This can affect clients whose lengths are
+      shorter than the router's default (thanks duck!)
 
 2004-11-17  jrandom
     * Fix to propogate i2psocket options into the SAM bridge correctly (thanks
