2004-11-21  jrandom     * Destroy ElGamal/AES+SessionTag keys after 15 minutes of inactivity       rather that every 15 minutes, and increase the warning period in which       we refresh tags from 30s to 2 minutes.     * Bugfix for a rare problem closing an I2PTunnel stream where we'd fail       to close the I2PSocket (leaving it to timeout).
Monotone-Parent: fe9555c12e8f1749c1ea74a76251ed33c390ac28
Monotone-Revision: 89f2c63b3f35e2c21db707d31616e01c9854d26a

Monotone-Author: jrandom
Monotone-Date: 2004-11-21T04:08:13
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,11 @@
-$Id: history.txt,v 1.75 2004/11/17 14:42:53 jrandom Exp $
+$Id: history.txt,v 1.76 2004/11/19 18:04:27 jrandom Exp $
+
+2004-11-21  jrandom
+    * Destroy ElGamal/AES+SessionTag keys after 15 minutes of inactivity 
+      rather that every 15 minutes, and increase the warning period in which
+      we refresh tags from 30s to 2 minutes.
+    * Bugfix for a rare problem closing an I2PTunnel stream where we'd fail
+      to close the I2PSocket (leaving it to timeout).
 
 2004-11-19  jrandom
     * Off-by-one fix to the tunnel pool management code, along side some 
